data/derived/comb/progs/unify/prog1595.ml.out
Characters 179-211:
  | m ->  helper (append [(m / 10)] [(m mod 10)]) in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
